R2-13 (4/4) + R2-14: examples compile-fixes + new R2-11a + R2-12 unit tests
Examples compile-fix sweep — all run through ksef-examples compile-only
module (ADR-022). Issues caught and fixed:

- Pattern-matching switch (Java 21+) converted to instanceof ladders
  in GetInvoiceFromArchive + IncrementalSync (target is Java 17).
- IncrementalSync FileCheckpointStore: Jackson dependency was outside
  ksef-examples classpath; replaced with plain Files.readAllLines /
  Files.writeString (ISO-8601 cursor + boolean lastTruncated, two
  lines). Drops Jackson from example deps.
- ExportInvoiceArchive: invalid method names. Fixed to actual public
  API: InvoiceExportStatus.invoicePackage() (not pkg()),
  ExportedInvoiceDirectory.outputDirectory()/invoiceXmls() (not
  directory()/xmlFiles()).
- GetInvoiceFromArchive + IncrementalSync: PefInvoiceDocument and
  PefKorInvoiceDocument expose .invoiceNumber() — example used
  hypothetical .invoice().getId() / .creditNote().getId() that did
  not exist.
- IssueOfflineInvoice: lambda parameter shadowed outer 'client'
  variable; refactored loadProvider() to no-arg helper.
- QueryPeppolProviders: accessor is .peppol() not .peppolProviders().

Internal type fixes uncovered during compile:
- KsefClient.Builder.invoiceTypes: @Nullable annotation positioning
  with a fully-qualified type (Java type-use rules require the
  annotation immediately before the simple name).
- PermissionsImpl.grant: pattern-matching switch (preview in 17)
  rewritten as instanceof ladder. Sealed parent permits clause still
  guarantees exhaustiveness at the type-system level; an
  IllegalStateException at the ladder's tail covers the unreachable
  default case.

New unit tests:
- PermissionsSealedDispatchTest (3 tests): asserts grant(req) routes
  PersonPermissionGrantRequest to /persons/grants and
  EntityPermissionGrantRequest to /entities/grants; asserts null
  request throws NPE. Validates R2-11a sealed dispatch.
- TestDataClientTest gains revokeAttachment_wi